@@ -162,3 +162,7 @@ showSpeedTransparent    1
 # Enable/Disable auto frameskip
 # 0=disable, anything else to enable
 autoFrameSkip   0
+
+# Sets the desired throttle
+# 0=disable, 5...1000 valid throttle speeds
+throttle        0
